# LyricsExtractor

./: AmarokTagExtract.cbp  AmarokTagExtract.depend  AmarokTagExtract.layout  Makefile.am  configure.in  main.cpp  misc.cpp  misc.h
