AM_CONFIG_HEADER(config.h)

AC_INIT([main.cpp])
AM_INIT_AUTOMAKE([lyricsmaker], [0.1.2])

AC_LANG_CPLUSPLUS
AC_PROG_CXX

AC_CHECK_LIB(mysqlclient, mysql_init, , AC_MSG_ERROR(cannot find mysqlclient library!))
PKG_CHECK_MODULES(TAGLIB, taglib >= 1.7, , AC_MSG_ERROR(cannot find taglib!))
AC_CHECK_HEADER([mysql/mysql.h], , AC_MSG_ERROR(cannot find mysql.h!))

CXXFLAGS="`mysql_config --cflags` `pkg-config taglib --cflags`"
LDFLAGS="`mysql_config --libs` `pkg-config taglib --libs`"
AC_OUTPUT([Makefile])
